Carry type information for selects and cast back to proper types after query execution
Co-authored-by: Torben Meyer <torben.meyer@bakdata.com>